# rusty_volume

./: Cargo.toml  config.toml  deploy.sh  readme.MD  rusty-volume.service
src/: amixer_updater.rs  display_updater.rs  load_config.rs  main.rs  rotary_controller.rs
