[package]
name = "rusty_volume"
version = "0.1.0"
edition = "2021"

[dependencies]
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
get_if_addrs = "0.5.3"
gpio-cdev = "0.6.0"
linux-embedded-hal = "0.4.0"
local-ip = "0.1.0"
local-ip-address = "0.6.3"
regex = "1.11.1"
rppal = "0.19.0"
serde = { version = "1.0.214", features = ["derive"] }
ssd1306 = "0.9.0"
tokio = { version = "1.41.0", features = ["full", "process"] }
toml = "0.8.19"
